tests/negative/traits/duplicate_method.orng
trait My_Trait {
    fn lol() -> ()
    fn lol() -> ()
}